# DataScienceHW

./: .gitignore  Untitled.ipynb  intro.md  mlruns.db
HW1/: Hw1.ipynb  README.md  hw1.ipynb
HW1/.ipynb_checkpoints/: Hw1-checkpoint.ipynb
HW10/: HW_10_VGG16.ipynb  HW_10_VGG16_fixed.ipynb  HW_10_part_2.ipynb  README.md  hw_10.ipynb  hw_10_part_1.ipynb
HW11/: HW_11.ipynb  readme.md
HW12/: hw_12.ipynb  readme.md
HW13/: HW_10_VGG16.ipynb  Readme.md  app.py  requirements.txt
HW13_Dash/: Readme.md  app.py  requirements.txt
HW13_Dash/assets/: style.css
HW2/: README.md  hw2.1.ipynb  hw2.2.ipynb  hw2.3.ipynb
HW3/: README_hw_3.md  Readme.md  hw3.ipynb  hw_3_2.ipynb
HW4/: hw_4.ipynb
HW5/: README.md  hw_5.ipynb
HW6/: README.md  hw6.ipynb
HW7/: README.md  hw7.ipynb
HW8/: HW8.ipynb  NeuronNetwork.md  README.md
HW9/: HW9.ipynb  HW9_first.ipynb  HW9_last.ipynb  README.md
checkpoints/: GraphNN-checkpoint.ipynb
example_kaggle/: EDA_ex.ipynb  data.csv  example_kaggle.ipynb  les1.ipynb  matrix.ipynb  Лекція1_numpy.ipynb  Тема_6_Класичне_МН_заняття_1.ipynb  Тема_7_Класифікація_та_оцінка_роботи_моделі,Урок_2.ipynb  Тема_7_Класифікація_та_оцінка_роботи_моделі_Урок_1.ipynb
example_kaggle  /les_10/: intro_in_conv_NN.ipynb
example_kaggle/les-goit-ds-01/poetry-les/: pyproject.toml  readme.md
example_kaggle/les-goit-ds-02/: PostgreSQL_CheatSheet_README.md  connect_db.py  create_table.py  example.db  my_database.db
example_kaggle/les-goit-ds-2/: PostgreSQL_CheatSheet_README.md
example_kaggle/les_1/: conspect-example.ipynb  conspect_example.ipynb  example_kaggle.ipynb
example_kaggle/les_10/: CNN_Cats_Dogs_Updated.ipynb  Module_10_1_Convolutional_NN.ipynb  RNN_1.ipynb  RNN_2.ipynb  conspect_les.ipynb  conspect_les2.ipynb  conspect_les3.ipynb  keras_example.ipynb  multiple_filters.md  prepare_dataset.py  teoria.md
example_kaggle/les_11/: Module_11_1_Recurrent_Neural_Networks.ipynb  Module_11_2_LSTM.ipynb  les_1.ipynb  les_2.ipynb  les_2_LSTM.ipynb
example_kaggle/les_12/: Module_12_1_NLP.ipynb  Module_12_2_Transformers.ipynb  les_12_part_1.ipynb  les_12_part_2.ipynb  tokenizer-trained.json  word2vec.ipynb
example_kaggle/les_13/: dash_guide.md  streamlit_guide.md
example_kaggle/les_2/: EDA_ex.ipynb  les_2.ipynb  les_2_1_kees.ipynb  les_2_2.ipynb  les_2_2_kees.ipynb  (+4 more)
goit-ds-01/: Dockerfile  NotesBot.py  README.md  pyproject.toml
goit-ds-01/utils/: notesMenu.py
goit-ds-02/: README.md  app.py  connect_sqlite.py  create_tables.py  pyproject.toml  seed.py  sql_requests.py  todo.db
goit-ds-03/: README.md  authors.json  example.py  insert_to_mongoDB.py  main.py  pyproject.toml  run_mongo_container.py  scrape_quotes.py  seed.py
(+77 files in other folders)
