[tool.poetry]
name = "goit-ds-01"
version = "0.1.0"
description = "Personal helper"
authors = ["Siracenco Serghei <siracencoserghei@email.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
prompt-toolkit = "3.0.43"
pygments = "2.17.2"
rich = "13.7.0"
wcwidth = "0.2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
