[tool.poetry]
name = "goit-ds-02"
version = "0.1.0"
description = ""
authors = ["Siracenco Serghei <siracencoserghei@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^37.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
