[tool.poetry]
name = "poetry-les"
version = "0.1.0"
description = "les example"
authors = ["Siracenco Serghei <siracencoserghei@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
